@@ -1,3 +1,7 @@
+2000-11-25  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* download.html: increased version number to 2.3.23
+
 2000-11-20  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm-cats/index.html:
